# pku3b

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-release.yml  rustfmt.yml
assets/: README.md  demo-pku3b-a.yml  demo-pku3b-v.yml  pku3b-v.yml  windows_install.bat
src/: api.rs  cli.rs  config.rs  http.rs  main.rs  multipart.rs  pdf.rs  qs.rs  ttshitu.rs  utils.rs  walkdir.rs
src/api/: blackboard.rs  builder.rs  drm_lib.rs  low_level.rs  mod.rs  portal.rs  syllabus.rs  thesis_lib.rs
src/api/blackboard/: video.rs
src/api/low_level/: blackboard.rs  drm_lib.rs  iaaa.rs  portal.rs  syllabus.rs  thesis_lib.rs
src/cli/: cmd_announcement.rs  cmd_archive.rs  cmd_assignment.rs  cmd_bark.rs  cmd_course_content.rs  cmd_course_table.rs  cmd_document.rs  cmd_grades.rs  cmd_notice.rs  cmd_ppt.rs  cmd_schedule.rs  cmd_syllabus.rs  cmd_ta.rs  cmd_thesis_lib.rs  cmd_ttshitu.rs  cmd_video.rs  mod.rs  pbar.rs
