[package]
name = "pku3b"
version = "0.12.1"
edition = "2024"
authors = ["Weiyao Huang <jy.cat@qq.com>"]
license = "MIT"
description = "A tool for PKU students to check their courses."
readme = "README.md"
homepage = "https://github.com/sshwy/pku3b"
repository = "https://github.com/sshwy/pku3b"
keywords = ["cli"]
categories = ["command-line-utilities"]
exclude = ["/assets"]
build = "build.rs"

[dependencies]
aes = { version = "0.8", optional = true }
anyhow = { version = "1.0", default-features = false }
base64 = { version = "0.22", optional = true }
bytes = { version = "1.10", default-features = false }
cbc = { version = "0.1.2", optional = true, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
compio = { version = "0.18", features = [
    "macros",
    "process",
    "polling",
], default-features = false }
cyper = { version = "0.8", default-features = false, features = [
    "cookies",
    "native-tls",
] }
directories = "6.0.0"
env_logger = { version = "0.11", features = [
    "auto-color",
], default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", features = [
    "alloc",
    "async-await-macro",
], default-features = false }
http = { version = "1.2.0", default-features = false }
image = { version = "0.25", optional = true, features = [
    "jpeg",
], default-features = false }
indicatif = "0.17"
inquire = { version = "0.7", features = [
    "crossterm",
    "macros",
], default-features = false }
itertools = "0.14.0"
log = "0.4"
lopdf = { version = "0.39.0", optional = true, default-features = false }
m3u8-rs = { version = "6.0", optional = true }
memchr = "2.7"
rand = { version = "0.9", features = ["thread_rng"], default-features = false }
regex = "1.11.1"
pkcs8 = { version = "0.10", optional = true, default-features = false, features = [
    "pem",
] }
rsa = { version = "0.9", optional = true, features = ["pem"] }
scraper = { version = "0.23", default-features = false }
serde = { version = "1.0", features = [
    "serde_derive",
], default-features = false }
serde_json = "1.0"
shadow-rs = { version = "1.0", features = ["build"], default-features = false }
toml = "0.8"
url = "2.5"
urlencoding = { version = "2.1", optional = true }
cookie_store = "0.22.1"

[build-dependencies]
shadow-rs = { version = "1.0", features = ["build"], default-features = false }

[features]
dev = []
default = ["video-download", "autoelect", "bark", "thesislib-pdf"]

# support for downloading videos
aes = ["dep:aes"]
cbc = ["dep:cbc"]
m3u8-rs = ["dep:m3u8-rs"]
video-download = ["m3u8-rs", "aes", "cbc"]

# support for auto elective
autoelect = ["ttshitu"]
ttshitu = ["dep:image", "dep:base64"]
bark = ["dep:urlencoding"]

pdf = ["dep:lopdf", "dep:image"]

# support for thesis.lib.pku.edu.cn login (JSEncrypt-compatible RSA)
thesislib = ["dep:rsa", "dep:pkcs8", "dep:base64"]
thesislib-pdf = ["thesislib", "pdf"]

[profile.release]
lto = true
codegen-units = 1
